--- a/toDoList.html
+++ b/toDoList.html
@@ -8,18 +8,19 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>Simple Todo</title>
 </head>
 
 <body>
     <div id="conteiner">
-        <h1>To-Do List</h1>
+        <h1>To-Do List<i class="fa fa-plus"></i></h1>
         <input type="text">
 
         <ul>
-            <li> <span>X</span> Go to Class</li>
-            <li> <span>X</span> Buy a new Books</li>
-            <li> <span>X</span> Visit teacher</li>
+            <li> <span><i class="fa fa-trash"></i></span> Go to Class</li>
+            <li> <span><i class="fa fa-trash"></i></span> Buy a new Books</li>
+            <li> <span><i class="fa fa-trash"></i></span> Visit teacher</li>
         </ul>
     </div>
 
